[package]
name = "themelio-bootstrap"
version = "0.7.2"
edition = "2018"
description="Trust bootstrapping for Themelio clients"
license = "ISC"
authors = ["nullchinchilla <nullchinchilla@pm.me>", "Themelio Labs"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9.0"
themelio-nodeprot = { git = "https://github.com/themeliolabs/themelio-nodeprot", branch = "use-themelio-structs-0.3-beta" }
themelio-structs= "0.3.0-beta.5"