[package]
name = "melbootstrap"
version = "0.8.2"
edition = "2018"
description="Trust bootstrapping for Themelio clients"
license = "ISC"
authors = ["nullchinchilla <nullchinchilla@pm.me>", "Themelio Labs"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9.0"

# themelio-structs= "0.3.0-beta.8"
melstructs="0.3"
