[package]
name = "melbootstrap"
version = "0.8.5"
edition = "2021"
description="Trust bootstrapping for Mel clients"
license = "ISC"
documentation="https://github.com/mel-project/melbootstrap"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.9.0"

# themelio-structs= "0.3.0-beta.8"
melstructs="0.3"
